`align-issue-labels` - Fix CI icon spacing (#7419)

--- a/source/features/align-issue-labels.css
+++ b/source/features/align-issue-labels.css
@@ -14,7 +14,7 @@
 }
 
 /* Build status */
-[rgh-align-issue-labels] .js-issue-row .d-inline-block.mr-1 {
+[rgh-align-issue-labels] .js-issue-row .commit-build-statuses {
 	margin-left: 4px;
 }
 
